<resources>
    <string name="app_name">SamiC_charensol</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="plus">+</string>
    <string name="lastname">nom</string>
    <string name="firstname">prénom</string>
    <string name="old">age</string>
    <string name="adresse">adresse</string>
    <string name="inscription">inscription</string>

    <string name="lookingForSomeone">Looking for someone ?</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>